fix scrollbar padding

--- a/_sass/_scrollbar.scss
+++ b/_sass/_scrollbar.scss
@@ -102,7 +102,7 @@
  
 .scrollbar-inner > .scroll-element.scroll-y {
     height: 100%;
-    right: 2px;
+    right: 0;
     top: 0;
     width: 8px;
 }
